--- a/inc/style.css
+++ b/inc/style.css
@@ -31,7 +31,7 @@ h1 {
   margin-right: 10px;
   box-shadow: 0px 0px 10px  2px #e7931a;
 }
-.contenedorPieza {
+.DiamondFinalPuzzle {
   width: 100px;
   height: 100px;
   float: left;
